docs/milestone3/milestone3_application.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mctc-demo
---
apiVersion: v1
kind: Service
metadata:
  name: mctc-demo
  namespace: mctc-demo
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: mctc-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mctc-demo
  namespace: mctc-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mctc-demo
  template:
    metadata:
      labels:
        app: mctc-demo
    spec:
      containers:
        - name: mctc-demo
          image: docker.io/jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
              protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mctc-demo
  namespace: mctc-demo
spec:
  hostnames:
  - "$MYAPP_HOST"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: example-gateway
    namespace: mctc-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mctc-demo
      port: 80
      weight: 1
    matches:
    - method: GET
      path:
        type: PathPrefix
        value: /
